# Hackathon_0

./: .env.example  .gitignore  approval_watcher.py  calendar_assistant.py  calendar_mcp_server.py  ceo_briefing.py  contact_manager.py  error_recovery.py  facebook_mcp_server.py  gmail_mcp_server.py  gmail_watcher.py  instagram_mcp_server.py  linkedin_mcp_server.py  linkedin_post.py  linkedin_poster.py  main.py  main_backup.py  proactive_engine.py  pyproject.toml  reasoning_loop.py  router.py  schedule_setup.py  social_scheduler.py  vault_io.py  wa_send_once.py  watcher.py  whatsapp_seen.json  whatsapp_watcher.py  working_bronze.md  working_facebook.md  working_gold.md  working_linkedin.md  working_silver.md  working_whatsapp.md
.claude/: settings.local.json
Vault/: Company_Handbook.md  Dashboard.md  constitution.md  execution_plan.md
Vault/.obsidian/: graph.json  workspace.json
Vault/Done/: LINKEDIN_POST_20260316.md  PLAN_FACEBOOK_POST_20260518_143022.md  PLAN_email_20260310_115539_Favourite_color.md  PLAN_email_20260310_115540_Daily_routine.md  PLAN_email_20260310_154241_Plan_For_Eid_vacations.md  PLAN_email_20260310_161710_Sports_Gala_Invitation.md  PLAN_email_20260315_125055_Tell_yourself.md  PLAN_email_20260315_125657_Taffas_Birthday.md  PLAN_linkedin_20260316_124349_AI_Revolution.md  PLAN_linkedin_20260317_112040_MySQL_Database_Basic_Concepts.md  PLAN_linkedin_20260317_115421_Claude_Code_Basics.md  PLAN_linkedin_20260516_151625_Claude_Code_and_MCP_Integration.md  PLAN_whatsapp_20260315_122229_Zeeshan_Jutt_55956b.md  email_20260310_115539_Favourite_color.md  (+30 more)
(+18 files in other folders)
